[package]
name = "solana-hft-sniper"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
yellowstone-grpc-client = "1.13.0"
yellowstone-grpc-proto = "1.13.0"
jito-searcher-client = { git = "https://github.com/jito-foundation/jito-solana.git", branch = "master" }
solana-sdk = "1.17"
solana-client = "1.17"
solana-transaction-status = "1.17"
borsh = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
futures = "0.3"
base64 = "0.21"
bs58 = "0.5"
spl-token = "4.0"
spl-associated-token-account = "2.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
