[package]
name = "solana-hft-sniper"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
yellowstone-grpc-client = "1.15"
yellowstone-grpc-proto = "1.14"
solana-sdk = "1.18"
solana-client = "1.18"
solana-transaction-status = "1.18"
borsh = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
futures = "0.3"
base64 = "0.21"
bs58 = "0.5"
spl-token = "4.0"
spl-associated-token-account = "2.2"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
